--- a/sv_form/src/routes/styles.css
+++ b/sv_form/src/routes/styles.css
@@ -8,3 +8,34 @@ body {
 ul {
 	list-style: none;
 }
+[name='todo'] {
+	padding: 0.5rem 1.5rem;
+	border-radius: 3px;
+	border: 1px solid #eee;
+	margin-bottom: 0.5rem;
+	outline: none;
+}
+[name='todo']:focus {
+	outline: 2px solid orange;
+}
+button {
+	background-color: #fff;
+	border: none;
+	font-size: 0.7rem;
+	font-style: italic;
+	color: red;
+}
+li {
+	display: flex;
+	gap: 0.7rem;
+}
+li div {
+	min-width: 30vw;
+	display: flex;
+	justify-content: space-between;
+	gap: 1rem;
+	padding: 0.5rem 1.5rem;
+	border: 1px solid #eee;
+	border-radius: 3px;
+	margin-bottom: 0.5rem;
+}
